@@ -84,7 +84,8 @@ $_LANG['Ticket have open assigned events!'] = 'Zgłoszenie posiada otwarte zdarz
 $_LANG['Comment:'] = 'Komentarz:';
 $_LANG['Enter invoice comment'] = 'Wprowadz komenarz do faktury';
 $_LANG['<!rt>Expired'] = 'Przeterminowany';
-$_LANG['<!rt>Expired tickets'] = 'Przeterminowane zgłoszenia';
+$_LANG['<!rt>Owned expired tickets'] = 'Moje przeterminowane zgłoszenia (właściciel)';
+$_LANG['<!rt>Verifier expired tickets'] = 'Moje przeterminowane zgłoszenia (weryfikator)';
 $_LANG['<!rt>Without deadline'] = 'Bez terminu ostatecznego';
 $_LANG['<!rt>With deadline'] = 'Z terminem ostatecznym';
 $_LANG['Ticket deadline could not be set in past'] = 'Termin ostateczny nie może być datą minioną';
