@@ -100,6 +100,17 @@ switch ($action) {
                                 $redirect = '?m=rtqueueview&id=all&catid=all&priority=all&deadline=-2&owner=' . Auth::GetCurrentUser() . '&rights=' . RT_RIGHT_INDICATOR;
                 }
         break;
+        case 'expired2':
+        if (ConfigHelper::CheckPrivilege('helpdesk_administration') || ConfigHelper::CheckPrivilege('helpdesk_operation')) {
+            $count = $LMS->GetQueueContents(array('count' => true, 'state' => -1, 'deadline' => -2, 'verifier' => Auth::GetCurrentUser(), 'rights' => RT_RIGHT_INDICATOR));
+            if ($count == 1) {
+                $tickets = $LMS->GetQueueContents(array('count' => false, 'state' => -1, 'deadline' => -2, 'verifier' => Auth::GetCurrentUser(), 'rights' => RT_RIGHT_INDICATOR));
+                $ticket = reset($tickets);
+                $redirect = '?m=rtticketview&id=' . $ticket['id'];
+            } else
+                $redirect = '?m=rtqueueview&id=all&catid=all&priority=all&deadline=-2&owner=' . Auth::GetCurrentUser() . '&rights=' . RT_RIGHT_INDICATOR;
+        }
+        break;
 }
 
 if (!empty($redirect))
