@@ -68,7 +68,6 @@
             {trans("Owner:")}
             <SELECT size="1" name="owner[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect" data-default-value="{trans("- all -")}">
                 <OPTION value="0" data-exclusive{if !is_array($filter.owner) && $filter.owner == 0} selected{/if}>- {trans("no owner")} -</OPTION>
-                <OPTION value="-2" data-exclusive{if !is_array($filter.owner) && $filter.owner == -2} selected{/if}>- {trans("with owner")} -</OPTION>
                 {foreach $users as $user}
                 <OPTION value="{$user.id}"{if is_array($filter.owner) && in_array($user.id, $filter.owner)}} SELECTED{/if}>{$user.name|truncate:40:"...":true}</OPTION>
                 {/foreach}
